--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "@babel/parser": "^7.24.0",
     "@babel/traverse": "^7.24.0",
     "axios": "^1.6.7",
-    "dotenv": "^16.4.5"
+    "dotenv": "^16.4.5",
+    "express": "^5.2.1"
   },
   "keywords": [
     "documentation",
